--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.anas.jcmusintegrationwithdiscord</groupId>
     <artifactId>JCmusIntegrationWithDiscord</artifactId>
-    <version>0.1.0-DEV</version>
+    <version>1.0.0</version>
 
     <repositories>
         <repository>
