--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.anas.jcmusintegrationwithdiscord</groupId>
-    <artifactId>JCmusIntegrationWithDiscord</artifactId>
+    <groupId>com.anas.cmusrpc</groupId>
+    <artifactId>cmus-rpc</artifactId>
     <version>1.2.0</version>
 
     <repositories>
