--- a/archpackage/PKGBUILD
+++ b/archpackage/PKGBUILD
@@ -5,7 +5,7 @@ pkgrel=0
 epoch=0
 pkgdesc="A Discord Rich Presence for cmus player using java 🎶☕"
 arch=('any')
-url="https://github.com/Anas-Elgarhy/$pkgname"
+url="https://github.com/anas-elgarhy/$pkgname"
 license=('MIT')
 groups=()
 depends=('jdk17-openjdk' 'cmus')
@@ -19,7 +19,7 @@ backup=()
 options=()
 install=
 changelog=
-source=("https://github.com/Anas-Elgarhy/$pkgname/releases/download/$pkgver/$pkgname-$pkgver.tar.gz")
+source=("https://github.com/anas-elgarhy/$pkgname/releases/download/$pkgver/$pkgname-$pkgver.tar.gz")
 noextract=()
 md5sums=()
 validpgpkeys=()
